--- a/src/shared/components/layout/sidebar/Sidebar.module.css
+++ b/src/shared/components/layout/sidebar/Sidebar.module.css
@@ -1,15 +1,31 @@
 .sidebar {
-  width: 240px;
+  width: 15rem;
   color: #1c1c1c;
-  padding: 30px;
+  padding: 1.875rem;
   background-color: #fafafa;
   border-right: 1px solid #f4f4f4;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-.logo {
-  font-size: 22px;
-  margin-bottom: 30px;
-  border: 2px solid red;
+.logoContainer {
+  display: flex;
+  margin-bottom: 2rem;
+  text-decoration: none;
+}
+
+.logoImage {
+  width: 120px;
+  height: auto;
+  object-fit: contain;
+}
+
+.navItemsContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .nav {
@@ -27,9 +43,6 @@
   color: #1c1c1c;
   transition: all ease-in-out 0.3ss;
   border-radius: 0.875rem;
-  &:hover {
-    background-color: #e9e9e9;
-  }
 }
 .navItem:hover {
   background-color: #e9e9e9;
@@ -42,4 +55,14 @@
 
 .nav .navItem span {
   display: flex;
+}
+
+.navBtn {
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  font: inherit;
+  width: 100%;
+  text-align: left;
+  padding: 10px 12px;
 }
