--- a/src/shared/components/layout/sidebar/Sidebar.module.css
+++ b/src/shared/components/layout/sidebar/Sidebar.module.css
@@ -1,9 +1,7 @@
 .sidebar {
   width: 15rem;
-  color: #1c1c1c;
-  padding: 1.875rem;
-  background-color: #fafafa;
-  border-right: 1px solid #f4f4f4;
+  padding: 1.5rem;
+  border-right: 1px solid var(--color-border-light);
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -11,12 +9,12 @@
 
 .logoContainer {
   display: flex;
-  margin-bottom: 2rem;
+  margin-bottom: 2.5rem;
   text-decoration: none;
 }
 
 .logoImage {
-  width: 120px;
+  width: 7.5rem;
   height: auto;
   object-fit: contain;
 }
@@ -40,16 +38,16 @@
   padding: 10px 12px;
   gap: 0.5rem;
   text-decoration: none;
-  color: #1c1c1c;
+  color: var(--color-text-primary);
   transition: all ease-in-out 0.3ss;
   border-radius: 0.875rem;
 }
 .navItem:hover {
-  background-color: #e9e9e9;
+  background-color: var(--color-bg-secondary);
 }
 
 .active {
-  background-color: #e9e9e9;
+  background-color: var(--color-bg-secondary);
   font-weight: 500;
 }
 
