--- a/src/shared/components/theme/global.css
+++ b/src/shared/components/theme/global.css
@@ -1,7 +1,11 @@
+@import "./colors.css";
+
 body {
   margin: 0;
   padding: 0;
   font-family: system-ui, sans-serif;
+  background-color: var(--color-bg-primary);
+  color: var(--color-text-primary);
 }
 
 * {
