--- a/src/shared/components/layout/topbar/Topbar.module.css
+++ b/src/shared/components/layout/topbar/Topbar.module.css
@@ -1,15 +1,17 @@
 .topbar {
-  height: 4.5rem;
-  padding: 1.875rem;
+  padding: 8px clamp(0.7rem, 3vw, 1.875rem);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border: 2px solid red;
+  border-bottom: 1px solid var(--color-border-light);
+}
+
+.icon {
+  font-size: clamp(1rem, 2vw, 1.25rem);
 }
 
 .container {
   display: flex;
   align-items: center;
   gap: 1rem;
-  border: 2px solid red;
 }
