--- a/src/shared/components/theme/global.css
+++ b/src/shared/components/theme/global.css
@@ -1,14 +1,20 @@
 @import "./colors.css";
-@import "./breakpoints.css";
 
 body {
   margin: 0;
   padding: 0;
-  font-family: system-ui, sans-serif;
+  font-family: "Roboto", sans-serif;
   background-color: var(--color-bg-primary);
   color: var(--color-text-primary);
 }
 
 * {
   box-sizing: border-box;
+}
+
+button,
+input,
+textarea,
+select {
+  font-family: inherit;
 }
