--- a/src/features/transaction/pages/components/TransactionCard/TransactionCard.module.css
+++ b/src/features/transaction/pages/components/TransactionCard/TransactionCard.module.css
@@ -1,3 +1,9 @@
 .transactionContainer {
   padding: 4rem;
 }
+
+.descriptionContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
