--- a/src/shared/components/theme/colors.css
+++ b/src/shared/components/theme/colors.css
@@ -9,6 +9,7 @@
 
   /* Borders */
   --color-border-light: #f4f4f4;
+  --color-border-darker: #acacac;
 
   /* Status Colors */
   --color-status-success: #22c55e;
