--- a/src/features/dashboard/pages/components/DashboardTable/DashboardTable.module.css
+++ b/src/features/dashboard/pages/components/DashboardTable/DashboardTable.module.css
@@ -8,7 +8,7 @@
   align-self: center;
 }
 .seeMoreLink {
-  padding: 8px 1rem;
+  padding: clamp(0.4rem, 1vh, 0.875rem) clamp(0.75rem, 1.1vw, 1.5rem);
   margin: clamp(3rem, 2vw, 2rem) 0;
   border: 1px solid var(--color-border-darker);
   border-radius: 25rem;
