--- a/src/features/transaction/pages/components/TransactionCard/TransactionCard.module.css
+++ b/src/features/transaction/pages/components/TransactionCard/TransactionCard.module.css
@@ -63,14 +63,27 @@
   width: 100%;
   outline: none;
   transition: border-color 0.2s ease;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23333' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='m3 4.5 3 3 3-3'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 12px center;
+  box-sizing: border-box;
 }
 
 .filterDropdown:focus {
   border-color: var(--color-text-primary);
   outline: none;
+  background-color: #fff;
 }
 
 .filterDropdown:focus-visible {
   outline: none;
   border-color: var(--color-text-primary);
+}
+
+.filterDropdown:active {
+  color: var(--color-text-primary);
+  background-color: #fff;
 }
