smart and dump clean up

--- a/src/features/dashboard/components/AccountBalanceCard/AccountBalanceCard.module.css
+++ b/src/features/dashboard/components/AccountBalanceCard/AccountBalanceCard.module.css
@@ -1,5 +1,5 @@
 .accountBalanceBackground {
-  background-image: url("../../../../../assets/dashboard/account-bg.png");
+  background-image: url("../../../../assets/dashboard/account-bg.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
