--- a/src/shared/components/layout/TopBar/TopBar.module.css
+++ b/src/shared/components/layout/TopBar/TopBar.module.css
@@ -2,8 +2,14 @@
   padding: 8px clamp(0.7rem, 3vw, 1.875rem);
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   border-bottom: 1px solid var(--color-border-light);
+}
+
+@media (max-width: 1023px) {
+  .topbar {
+    justify-content: space-between;
+  }
 }
 
 .iconContainer {
